--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,10 @@ jobs:
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     - name: Build with Gradle Wrapper
-      run: ./gradlew build
+      run: |
+          u
+          gradle wrapper 
+          ./gradlew build
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
@@ -48,11 +51,7 @@ jobs:
     #   run: gradle build
 
   dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
+  
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -60,6 +59,10 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+     - name: Setup Android environment
+        run: |
+            
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
