--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,7 +50,10 @@ jobs:
     #   run: gradle build
 
   dependency-submission:
-  
+  - runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
