--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,8 +35,8 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: |
-          gradle wrapper 
-          ./gradlew build
+        gradle wrapper 
+        ./gradlew build
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
@@ -50,10 +50,11 @@ jobs:
     #   run: gradle build
 
   dependency-submission:
-  - runs-on: ubuntu-latest
+
+    runs-on: ubuntu-latest
     permissions:
       contents: write
-      
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -61,7 +62,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        
+
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
