--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,14 +12,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-
+      contents: write
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
